src/objects/Apttus__ComplySystemProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Comply System properties</description>
    <fields>
        <fullName>Apttus__AdminUser__c</fullName>
        <description>The admin user name (format = first name, last name)</description>
        <inlineHelpText>The admin user is the default owner of activities created by a user who is not allowed to be the owner (for e.g. customer portal user).</inlineHelpText>
        <label>Admin User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AgreementNumberFieldForImportedDocs__c</fullName>
        <description>The API name of the agreement number field for third party documents</description>
        <inlineHelpText>The API name of the agreement number field for third party documents</inlineHelpText>
        <label>Agreement Number Field For Imported Docs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AllowPDFSelectionOverride__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the pdf selection is allowed to be overridden by the user. Only applicable when pdf is auto enabled for final documents.</description>
        <inlineHelpText>Indicates whether the pdf selection is allowed to be overridden by the user. Only applicable when pdf is auto enabled for final documents.</inlineHelpText>
        <label>Allow PDF Selection Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__AllowPrivateSelectionOverride__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the private document selection is allowed to be overridden by the user. Only applicable when private indicator is auto enabled for documents</description>
        <inlineHelpText>Indicates whether the private document selection is allowed to be overridden by the user. Only applicable when private indicator is auto enabled for documents</inlineHelpText>
        <label>Allow Private Selection Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__AllowReconcileSelectionOverride__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the reconcile selection is allowed to be overridden by the user. Only applicable when reconciliation is auto enabled for documents.</description>
        <inlineHelpText>Indicates whether the reconcile selection is allowed to be overridden by the user. Only applicable when reconciliation is auto enabled for documents.</inlineHelpText>
        <label>Allow Reconcile Selection Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__ApiUserKey__c</fullName>
        <description>NO LONGER USED</description>
        <inlineHelpText>NO LONGER USED</inlineHelpText>
        <label>Api User Key (DEPRECATED)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__AutoEnablePDFForFinalDocs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether PDF format is auto enabled for final documents</description>
        <inlineHelpText>Indicates whether PDF format is auto enabled for final documents</inlineHelpText>
        <label>Auto Enable PDF For Final Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__AutoEnablePrivateIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether private indicator is auto enabled for documents</description>
        <inlineHelpText>Indicates whether private indicator is auto enabled for documents</inlineHelpText>
        <label>Auto Enable Private Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__AutoEnableReconciliation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether reconciliation is auto enabled for documents</description>
        <inlineHelpText>Indicates whether reconciliation is auto enabled for documents</inlineHelpText>
        <label>Auto Enable Reconciliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__AutoInsertHeaderFooterData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to allow automatic placement of Agreement number in the header and last modified timestamp in the footer of the document for generate actions and also check-in, offline and import actions by X-Author (7.1.721 or later). The agreement is either the Apttus agreement number  or as indicated by the agreement number field property ( for offline and import actions). The footer datetime format property may be used to indicate the timestamp format.</description>
        <inlineHelpText>Indicator to allow automatic placement of Agreement number in the header and last modified timestamp in the footer of the document for generate, offline and import actions.</inlineHelpText>
        <label>Auto Insert Header Footer Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__BypassSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether apex code can bypass record sharing</description>
        <label>Bypass Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__ContractSummaryTemplate__c</fullName>
        <description>The name of the contract summary template.</description>
        <inlineHelpText>The name of the contract summary template.</inlineHelpText>
        <label>Contract Summary Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DefaultDocumentTags__c</fullName>
        <description>Default set of document tags to be used during check-in from X-Author. Tags are comma separated values.</description>
        <inlineHelpText>Default set of document tags to be used during check-in from X-Author. Tags are comma separated values.</inlineHelpText>
        <label>Default Document Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DefaultOpportunityAgreementOwner__c</fullName>
        <defaultValue>&quot;Opportunity Owner&quot;</defaultValue>
        <description>The default owner for the agreement created from an opportunity. Valid values are Opportunity Owner and Current User. If not set, the Opportunity Owner will become the owner of the new agreement</description>
        <inlineHelpText>The default owner for the agreement created from an opportunity. Valid values are Opportunity Owner and Current User. If not set, the Opportunity Owner will become the owner of the new agreement</inlineHelpText>
        <label>Default Opportunity Agreement Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentNamingConvention__c</fullName>
        <description>You may apply your own naming convention to documents at generation, check-in and signature events, by defining a string of delimited variables, in the format %VariableName1%_%VariableName 2% … The default value is &apos;%:Name%_%action%_%templatename%_%timestamp%&apos;.</description>
        <inlineHelpText>You may apply your own naming convention to documents at generation, check-in and signature events, by defining a string of delimited variables, in the format %VarName1%_%VarName 2% … The default value is &apos;%:Name%_%action%_%templatename%_%timestamp%&apos;.</inlineHelpText>
        <label>Document Naming Convention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentStructureFX2ForImportedDocs__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Applies FX2 framework to CM actions Create, Import Offline Documents, else Pre-FX2. Not for X-Author actions</description>
        <inlineHelpText>Applies FX2 framework to CM actions Create, Import Offline Documents, else Pre-FX2. Not for X-Author actions</inlineHelpText>
        <label>Document Structure FX2 For Imported Docs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentVersioningNamingConvention__c</fullName>
        <description>Optional naming convention to be used for naming versioned documents</description>
        <inlineHelpText>Optional naming convention to be used for naming versioned documents</inlineHelpText>
        <label>Document Versioning Naming Convention (D</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__EmailTemplateForCheckinNotification__c</fullName>
        <description>The email template for sending checkin notifications.</description>
        <inlineHelpText>The email template for sending checkin notifications.</inlineHelpText>
        <label>Email Template For Checkin Notification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__EnableClauseApprovals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether clause approvals are enabled</description>
        <inlineHelpText>Indicates whether clause approvals are enabled</inlineHelpText>
        <label>Enable Clause Approvals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__EnableDocumentVersioning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables document versioning. Make sure EnableVersionControl is set to true.</description>
        <inlineHelpText>Enables document versioning. Make sure EnableVersionControl is set to true.</inlineHelpText>
        <label>Enable Document Versioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__EnableMergeCallDebug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the merge service debug is enabled</description>
        <inlineHelpText>Indicates whether the merge service debug is enabled</inlineHelpText>
        <label>Enable Merge Call Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__EnableMultipleCheckout__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether multiple checkout is allowed. Only applicable when version control is in effect.</description>
        <inlineHelpText>Indicates whether multiple checkout is allowed. Only applicable when version control is in effect.</inlineHelpText>
        <label>Enable Multiple Checkout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__EnablePDFSecurity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enabling pdf security lets users apply security settings to pdf documents and protect them with a password.</description>
        <inlineHelpText>Enabling pdf security lets users apply security settings to pdf documents and protect them with a password.</inlineHelpText>
        <label>Enable PDF Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__EnableSubmitMergeCall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether merge calls may be submitted for processing. If enabled, a Submit button is displayed during document generation.</description>
        <inlineHelpText>Indicates whether merge calls may be submitted for processing. If enabled, a Submit button is displayed during document generation.</inlineHelpText>
        <label>Enable Submit Merge Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__EnableTemplateVersioning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables template versioning</description>
        <inlineHelpText>Enables template versioning</inlineHelpText>
        <label>Enable Template Versioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__EnableVersionControl__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether version control is in effect. If enabled, checkout/check-in policy is enforced for agreement documents.</description>
        <inlineHelpText>Indicates whether version control is in effect. If enabled, checkout/check-in policy is enforced for agreement documents.</inlineHelpText>
        <label>Enable Version Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__ExcludedNamespaces__c</fullName>
        <description>A comma separated list of namespaces to exclude objects from the wizard dropdown</description>
        <inlineHelpText>A comma separated list of namespaces to exclude objects from the wizard dropdown</inlineHelpText>
        <label>Excluded Namespaces</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__FooterDatetimeFormatForImportedDocs__c</fullName>
        <description>The format of the date time to place in the footer of the imported document</description>
        <inlineHelpText>The format of the date time to place in the footer of the imported document</inlineHelpText>
        <label>Footer Datetime Format For Imported Docs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__HideContentControlBorder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if content control border has to hidden</description>
        <inlineHelpText>Indicates if content control border has to hidden</inlineHelpText>
        <label>Hide Content Control Border</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__InstanceUrl__c</fullName>
        <description>The Salesforce instance url for redirecting to custom pages</description>
        <label>Instance Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Apttus__MaxChildLevel__c</fullName>
        <description>The maximum level to generate the merge data for</description>
        <inlineHelpText>The maximum level to generate the merge data for</inlineHelpText>
        <label>Max Child Level</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__MergeCallTimeoutMillis__c</fullName>
        <defaultValue>60000</defaultValue>
        <description>The timeout in milliseconds for the merge request</description>
        <label>Merge Call Timeout Millis</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__MergeWebserviceEndpoint__c</fullName>
        <description>The Apttus merge web service endpoint</description>
        <label>Merge Webservice Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Apttus__PDFOwnerPwd__c</fullName>
        <description>The password required to change permissions of the PDF document like printing or editing.</description>
        <inlineHelpText>The password required to change permissions of the PDF document like printing or editing.</inlineHelpText>
        <label>PDF Owner Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PublishAuthorEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether author events should be published. If enabled, a record is inserted in the Merge Event table.</description>
        <inlineHelpText>Indicates whether author events should be published. If enabled, a record is inserted in the Merge Event table.</inlineHelpText>
        <label>Publish Author Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__PublishMergeEvents__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether merge events should be published. If enabled, a record is inserted in the Merge Event table.</description>
        <label>Publish Merge Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__TempEmailTemplateInactiveHours__c</fullName>
        <description>Indicates the hours of inactivity after which a temp email template is considered abandoned. The default value is 4 hours</description>
        <inlineHelpText>Indicates the hours of inactivity after which a temp email template is considered abandoned. The default value is 4 hours</inlineHelpText>
        <label>Temp Email Template Inactive Hours</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__UseAgreementLocksForVersioning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates agreement lock is turned on for a version-aware record on first document check-out, thereby locking all the record’s documents to that user. Lock released on all documents on first check-in.</description>
        <inlineHelpText>Indicates agreement lock is turned on for a version-aware record on first document check-out, thereby locking all the record’s documents to that user. Lock released on all documents on first check-in.</inlineHelpText>
        <label>Use Agreement Locks for Versioning</label>
        <type>Checkbox</type>
    </fields>
    <label>Comply System Properties</label>
</CustomObject>